# llm_paper_review

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_pipeline.sh  setup_rankgpt.py  setup_rankgpt.sh  start_services_and_run.sh
data/: metadata.json
data/lim-20251001-022422/: .primary_pdf  lim-20251001-022422.json  lim-20251001-022422_fulltext.tei.xml  metadata.json  novelty_delta_analysis.txt  research_landscape.txt  structured_representation.json  summary.txt
data/lim-20251001-022422/introductions/: 04b2f3d742f33c372df81d8af2ea34c8fec629fb_intro.txt  1784c987e681d60c634765fe64c8d9c26f73d5ff_intro.txt  1c7db9fb18246787fbe3de6e0eaa370ae749e795_intro.txt  23c2e21b6a5789724715f2986fdc586a517ffe57_intro.txt  3b430f665a04e8ccc5fac30ff39b42d4c6cc893d_intro.txt  501f8a0200a12a6f3906c1e4f3f40715e0e7d23a_intro.txt  5b2c04e082a56c0eb70ed62bc36148919f665e1c_intro.txt  6027d9b7f875a42a36029e2d3b7308be6fa88bb1_intro.txt  61166a7545c7cadb1ec79c4744c348bac7644d41_intro.txt  (+7 more)
data/paper/: metadata.json  novelty_delta_analysis.txt  paper.json  paper_fulltext.tei.xml  research_landscape.txt  structured_representation.json  summary.txt
docs/: end_to_end_workflow.md  full_pipeline_guide.md  llm_assessment_overview.md
src/: full_pipeline_runner.py  streamlit_app.py
src/novelty_assessment/: generate_summary.py  novelty_assessment.py  pipeline.py  research_landscape.py  structured_extraction.py
src/preprocess/: extract_metadata.py  run_ocr.py
src/retrieval/: extract_introductions.py  get_cited_pdfs.py  match_papers_to_s2.py  retrieval.py
(+20 files in other folders)
