[project]
name = "arxiv2025-assessing-paper-novelty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "acl-anthology>=0.2.0",
    "docling>=2.54.0",
    "grobid-client-python>=0.0.17",
    "langchain>=0.1.0",
    "langchain-community>=0.0.5",
    "langchain-openai>=0.0.5",
    "litellm>=1.0.0",
    "lxml>=4.9.0",
    "mineru[core]>=2.5.4",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.0.0",
    "requests>=2.28.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.38.0",
    "tenacity>=8.0.0",
]
